CI: set up workflows

--- a/trackfitpro-frontend/package.json
+++ b/trackfitpro-frontend/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --watch",
+    "lint": "eslint",
+    "test": "jest",
     "open:coverage": "start ./coverage/lcov-report/index.html",
     "eject": "react-scripts eject"
   },
